--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -64,10 +64,32 @@
       <div class="flex flex-col gap-1 py-2">
         @for (navbar of navbarJson; track $index) {
         <div
-          class="flex items-center gap-3 px-3 py-2 cursor-pointer hover:bg-gray-100"
+          class="flex items-center justify-between px-3 py-2 cursor-default hover:bg-gray-100 group"
         >
-          <div><img class="h-6 w-6" src="{{ navbar.icon }}" alt="" /></div>
-          <div class="inter-5 text-sm text-gray-700">{{ navbar.name }}</div>
+          <div class="flex items-center gap-3">
+            <div><img class="h-6 w-6" src="{{ navbar.icon }}" alt="" /></div>
+            <div class="inter-5 text-sm text-gray-700">{{ navbar.name }}</div>
+          </div>
+          <div>
+            <button class="hidden group-hover:block">
+              <svg
+                class="w-6 h-6 text-gray-800 hover:text-black"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-width="2"
+                  d="M6 12h.01m6 0h.01m5.99 0h.01"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
 
         }
@@ -77,10 +99,32 @@
         <div class="flex flex-col gap-1">
           @for (shared of sharedJson; track $index) {
           <div
-            class="flex items-center gap-3 px-3 py-2 cursor-pointer hover:bg-gray-100"
+            class="flex items-center justify-between px-3 py-2 hover:bg-gray-100 group"
           >
-            <div><img class="h-6 w-6" src="{{ shared.icon }}" alt="" /></div>
-            <div class="inter-5 text-sm text-gray-700">{{ shared.name }}</div>
+            <div class="flex items-center gap-3">
+              <div><img class="h-6 w-6" src="{{ shared.icon }}" alt="" /></div>
+              <div class="inter-5 text-sm text-gray-700">{{ shared.name }}</div>
+            </div>
+            <div>
+              <button class="hidden group-hover:block">
+                <svg
+                  class="w-6 h-6 text-gray-800 hover:text-black"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-width="2"
+                    d="M6 12h.01m6 0h.01m5.99 0h.01"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
 
           }
@@ -121,10 +165,34 @@
         <div class="flex flex-col gap-1">
           @for (private of privateJson; track $index) {
           <div
-            class="flex items-center gap-3 px-3 py-2 cursor-pointer hover:bg-gray-100"
+            class="flex items-center justify-between px-3 py-2 cursor-default hover:bg-gray-100 group"
           >
-            <div><img class="h-6 w-6" src="{{ private.icon }}" alt="" /></div>
-            <div class="inter-5 text-sm text-gray-700">{{ private.name }}</div>
+            <div class="flex items-center gap-3">
+              <div><img class="h-6 w-6" src="{{ private.icon }}" alt="" /></div>
+              <div class="inter-5 text-sm text-gray-700">
+                {{ private.name }}
+              </div>
+            </div>
+            <div>
+              <button class="hidden group-hover:block">
+                <svg
+                  class="w-6 h-6 text-gray-800 hover:text-black"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-width="2"
+                    d="M6 12h.01m6 0h.01m5.99 0h.01"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
 
           }
@@ -195,7 +263,7 @@
 
 <div
   id="journalSide"
-  class="fixed w-[286px] mt-4 ml-64 pt-2 border-r-[1px] border-r-gray-200 hidden sm:block"
+  class="fixed w-[286px] mt-4 ml-64 pt-2 border-r-[1px] border-r-gray-200 hidden sm:block overflow-y-auto max-h-[90vh] scroll-hide"
 >
   <div
     id="journalSearch1"
@@ -299,11 +367,15 @@
       (cdkDropListDropped)="drop($event)"
     >
       <div
-        class="py-2 flex flex-col gap-1 bg-white example-box cursor-pointer"
-        *ngFor="let item of journalEntries"
+        class="py-2 flex flex-col gap-1 bg-white example-box cursor-pointer hover:bg-gray-100"
+        *ngFor="let item of journalEntries; let i = index"
+        (click)="displayJournalEntry(i)"
+        [ngClass]="{
+          'bg-slate-200 hover:bg-slate-200 px-1 rounded': item === selectedEntry
+        }"
         cdkDrag
       >
-        <div class="inter-6 text-sm text-gray-950">{{ item.title }}:</div>
+        <div class="inter-6 text-sm text-gr ay-950">{{ item.title }}:</div>
         <div class="flex gap-2 items-center">
           <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
           <div class="truncate inter-5 text-xs text-gray-400">
@@ -356,8 +428,10 @@
   id="journalModal"
   class="py-4 sm:ml-[542px] mt-12 pt-6 flex flex-col justify-center items-center"
 >
-  <div class="flex justify-between px-6 py-2 w-full">
-    <div class="text-gray-900 inter-4 text-xl">Home dashboard</div>
+  <div *ngIf="selectedEntry" class="flex justify-between px-6 py-2 w-full">
+    <div class="text-gray-900 inter-4 text-xl">
+      {{ selectedEntry.title }}
+    </div>
     <div class="flex items-center gap-4">
       <div
         class="flex group gap-2 px-2 py-1 items-center cursor-pointer border border-gray-300 hover:border-gray-500 hover:bg-gray-100 rounded-lg"
@@ -410,7 +484,7 @@
             <div class="flex gap-2 items-center">
               <div>
                 <svg
-                  class="w-5 h-5 text-gray-500 dark:text-white"
+                  class="w-5 h-5 text-gray-500"
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -431,7 +505,7 @@
             </div>
             <div>
               <svg
-                class="w-5 h-5 text-[#7F56D9] dark:text-white hidden group-hover:block"
+                class="w-5 h-5 text-[#7F56D9] hidden group-hover:block"
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -499,34 +573,21 @@
   <p class="inter-5 text-xs text-gray-400 pt-4">{{ currentDateTime }}</p>
   <div class="w-full flex flex-col gap-6 p-6">
     <div class="flex gap-[6px]">
-      <div
-        class="py-1 px-[10px] border border-gray-300 rounded-md inter-5 text-sm text-gray-700"
-      >
-        TagText1
-      </div>
-      <div
-        class="py-1 px-[10px] border border-gray-300 rounded-md inter-5 text-sm text-gray-700"
-      >
-        Tag2
+      <div class="flex gap-[6px]">
+        @for (tag of selectedEntry?.tags; track $index) {
+        <div
+          class="py-1 px-[10px] border border-gray-300 rounded-md inter-5 text-sm text-gray-700 cursor-default"
+        >
+          {{ tag }}
+        </div>
+        }
       </div>
     </div>
-    <div class="w-full text-gray-900 inter-4 text-md">
-      Daily Reflections: Hosted a successful yoga workshop, attracting new
-      members. Faced a challenge with scheduling; considering a new software
-      solution. Explored partnership opportunities with local health food
-      vendors. Goals and Objectives: Increase class attendance by 15% in the
-      next month. Launch a referral program to incentivize current members.
-      Expand class offerings to include high-demand fitness trends. Financial
-      Updates: Monthly revenue increased by 8%. Investment in new equipment for
-      upcoming fitness classes. Analyzing cost-effective marketing strategies
-      for the next quarter. Customer Interactions: Received positive
-      testimonials from members on recent classes. Addressed a member concern
-      about class timing; adjusting the schedule. Organizing a community fitness
-      challenge for engagement and retention. Remember, these examples are
-      entirely fictional and created for illustrative purposes. Feel free to
-      adapt them based on your creativity and the specific nature of the
-      business you have in mind.
-    </div>
+    <div
+      class="w-full text-gray-900 inter-4 text-md flex flex-col gap-3"
+      [innerHTML]="selectedEntry?.description"
+    ></div>
+
     <div class="flex flex-wrap w-full gap-x-6 gap-y-4">
       <img class="w-64 h-auto" src="../../../assets/images/img1.png" alt="" />
       <img class="w-64 h-auto" src="../../../assets/images/img2.png" alt="" />
@@ -534,232 +595,17 @@
       <img class="w-64 h-auto" src="../../../assets/images/img4.png" alt="" />
     </div>
 
-    <!----------------------------------------------------------------------------------------------------------------- -------------------------------------------------- Voice recorder ------------------------------------------------- ------------------------------------------------------------------------------------------------------------------->
+    <!----------------------------------------------------------------------------------------------------------------- ---------------------------------------------- Display Recorded Voice ------------------------------------------ ------------------------------------------------------------------------------------------------------------------->
 
-    <div id="voiceRecorder" class="flex flex-col">
-      <!-- Initial state -->
-      @if (currentAudioState === 'initialAudio') {
-      <div id="initialState" class="flex flex-col gap-[6px] w-fit">
-        <div class="inter-5 text-gray-700 text-sm">Record voice</div>
-        <div
-          class="flex flex-col gap-3 items-center justify-center px-6 py-4 border border-gray-200 rounded-xl"
-        >
-          <div class="cursor-pointer">
-            <img
-              (click)="startRecordingAudio()"
-              src="../../../assets/images/record_mic.png"
-              alt=""
-              class="w-10 h-auto"
-            />
-          </div>
-          <div class="text-sm inter-4 text-gray-600">
-            <span
-              (click)="startRecordingAudio()"
-              class="inter-6 text-[#6941C6] text-sm font-semibold cursor-pointer"
-              >Click</span
-            >
-            to start recording...
-          </div>
-        </div>
-      </div>
-      }
-
-      <!-- Recording state -->
-      @if (currentAudioState === 'recordingAudio') {
-      <div id="initialState" class="flex flex-col gap-[6px] w-fit">
-        <div class="inter-5 text-gray-700 text-sm">Record voice</div>
-        <div
-          class="flex flex-row gap-6 justify-center px-16 py-6 border border-gray-200 rounded-xl"
-        >
-          <div class="flex flex-col gap-3 items-center">
-            <div class="cursor-pointer">
-              @if ( !isPaused ) {
-              <svg
-                (click)="onAudioPause()"
-                id="recordingPauseIcon"
-                class="w-8 h-8 text-white bg-red-500 p-2 rounded-full ring-8 ring-gray-200"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                fill="none"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M10 9v6m4-6v6m7-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-                />
-              </svg>
-              } @if (isPaused) {<svg
-                (click)="onAudioResume()"
-                id="recordingResumeIcon"
-                class="w-8 h-8 text-white bg-red-500 p-2 rounded-full ring-8 ring-gray-200"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                fill="none"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M8 18V6l8 6-8 6Z"
-                /></svg
-              >}
-            </div>
-            <div class="text-sm inter-4 text-gray-600 hover:text-[#6941C6]">
-              00:{{ recordingTime | number : "2.0" }}
-            </div>
-            <div class="w-28 rounded-full h-2 bg-gray-200">
-              <div
-                class="bg-red-500 h-2 rounded-full"
-                [style.width.%]="(recordingTime / maxRecordingTime) * 100"
-              ></div>
-            </div>
-          </div>
-          <div>
-            <svg
-              id="recordingStopIcon"
-              (click)="onAudioStop()"
-              class="w-7 h-7 text-white border-white border-2 rounded-full bg-gray-400 p-1 ring-4 ring-gray-200 cursor-pointer"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <rect
-                width="12"
-                height="12"
-                x="6"
-                y="6"
-                stroke="currentColor"
-                stroke-linejoin="round"
-                stroke-width="2.5"
-                rx="1"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-      }
-
-      <!-- Recorded state -->
-      @if (currentAudioState === 'recordedAudio') {
-      <div
-        id="recordedState"
-        class="flex gap-5 justify-center p-4 border border-gray-200 rounded-xl w-fit"
-      >
-        <div>
-          <svg
-            id="recordedPlayIcon"
-            (click)="onRecordedPlay()"
-            class="w-8 h-8 bg-[#9E77ED] rounded-full ps-1 text-white ring-8 ring-gray-200 cursor-pointer hover:bg-[#6941C6] hover:text-white"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            fill="none"
-            viewBox="0 0 24 24"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M8 18V6l8 6-8 6Z"
-            />
-          </svg>
-          <svg
-            id="recordedPauseIcon"
-            (click)="onRecordedPause()"
-            class="w-8 h-8 bg-[#9E77ED] rounded-full p-1 text-white ring-8 ring-gray-200 cursor-pointer hover:bg-[#6941C6] hover:text-white hidden"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            fill="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M8 5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H8Zm7 0a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-        <div class="flex flex-col gap-4">
-          <div class="flex justify-between items-center">
-            <div class="text-gray-700 inter-5 text-sm">Record 1</div>
-            <div>
-              <svg
-                class="w-[20px] h-[20px] text-gray-500 dark:text-white cursor-pointer hover:text-gray-700 dark:hover:text-gray-300"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                fill="none"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="flex gap-3">
-            <div class="flex gap-3 items-center">
-              <div>00:{{ playbackTime | number : "2.0" }}</div>
-              <div class="w-28 rounded-full h-2 bg-gray-200">
-                <div
-                  class="h-2 rounded-full bg-[#7F56D9]"
-                  [style.width.%]="(playbackTime / recordedDuration) * 100"
-                ></div>
-              </div>
-            </div>
-            <div class="flex gap-3 items-center">
-              <div>00:{{ recordedDuration | number : "2.0" }}</div>
-              <div class="flex gap-1 items-center">
-                <div>
-                  <svg
-                    class="w-[24px] h-[24px] text-black dark:text-white"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M17.5 8.43A4.985 4.985 0 0 1 19 12a4.984 4.984 0 0 1-1.43 3.5M14 6.135v11.73a1 1 0 0 1-1.64.768L8 15H6a1 1 0 0 1-1-1v-4a1 1 0 0 1 1-1h2l4.36-3.633a1 1 0 0 1 1.64.768Z"
-                    />
-                  </svg>
-                </div>
-                <div class="w-[58px] rounded-full h-2 bg-gray-200">
-                  <div class="w-6 h-2 rounded-full bg-[#7F56D9]"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      }
+    <div *ngIf="selectedEntry?.audio">
+      <audio controls>
+        <source [src]="selectedEntry?.audio" type="audio/mpeg" />
+        Your browser does not support the audio tag.
+      </audio>
     </div>
+
+    <!----------------------------------------------------------------------------------------------------------------- -------------------------------------------------- Video recorder ------------------------------------------------- ------------------------------------------------------------------------------------------------------------------->
+
     <h3 class="text-lg font-semibold">Videos:</h3>
     <div class="rounded-xl w-96">
       <div class="grid grid-cols-1 gap-4 mt-2">
