--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -113,11 +113,12 @@
         <div class="inter-5 text-sm pb-2 text-gray-700">Private</div>
         <div>
           <button
-            class="group flex items-center gap-3 px-3 py-2 w-full border border-gray-200 hover:border-gray-500 rounded-md"
+            (click)="createNewPage()"
+            class="group flex items-center gap-3 px-3 py-2 w-full border border-gray-200 rounded-md hover:bg-[#6941C6] transition duration-300 ease-in-out"
           >
             <div>
               <svg
-                class="w-[24px] h-[24px] text-gray-500 group-hover:text-gray-700"
+                class="w-[24px] h-[24px] text-gray-500 group-hover:text-white transition duration-300 ease-in-out"
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -129,31 +130,37 @@
                   stroke="currentColor"
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  stroke-width="1"
+                  stroke-width="2"
                   d="M12 7.757v8.486M7.757 12h8.486M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
                 />
               </svg>
             </div>
             <div
-              class="inter-5 text-base text-gray-500 group-hover:text-gray-700"
+              class="inter-5 text-base text-gray-500 group-hover:text-white transition duration-300 ease-in-out"
             >
               New page
             </div>
           </button>
         </div>
         <div class="flex flex-col gap-1">
-          @for (private of privateJson; track $index) {
+          @for (page of pagesArray; track $index) {
           <div
             class="flex items-center justify-between px-3 py-2 cursor-default hover:bg-gray-100 group"
           >
             <div class="flex items-center gap-3">
-              <div><img class="h-6 w-6" src="{{ private.icon }}" alt="" /></div>
+              <div>
+                <img
+                  class="h-6 w-6"
+                  src="../../../assets/images/icons/travel.png"
+                  alt=""
+                />
+              </div>
               <div class="inter-5 text-sm text-gray-700">
-                {{ private.name }}
+                {{ page.name }}
               </div>
             </div>
-            <div>
-              <button class="hidden group-hover:block">
+            <div class="relative">
+              <button (click)="openOption()" class="hidden group-hover:block">
                 <svg
                   class="w-6 h-6 text-gray-800 hover:text-black"
                   aria-hidden="true"
@@ -171,6 +178,59 @@
                   />
                 </svg>
               </button>
+              <div
+                *ngIf="pageEditDelete"
+                class="absolute flex flex-col gap-1 z-10 top-8 -right-3 w-40"
+              >
+                <div
+                  class="flex justify-between group bg-white hover:bg-gray-100 p-2"
+                >
+                  <div>Edit Page</div>
+                  <div class="hidden group-hover:block">
+                    <svg
+                      class="w-5 h-5 text-gray-700"
+                      aria-hidden="true"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M5 11.917 9.724 16.5 19 7.5"
+                      />
+                    </svg>
+                  </div>
+                </div>
+                <div
+                  class="flex justify-between group bg-white hover:bg-gray-100 p-2"
+                >
+                  <div>Delete Page</div>
+                  <div class="hidden group-hover:block">
+                    <svg
+                      class="w-5 h-5 text-gray-700"
+                      aria-hidden="true"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M5 11.917 9.724 16.5 19 7.5"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -1447,7 +1507,7 @@
 <!------------------------------------------------------------------------------------------------------------- --------------------------------------------- Confirm Deletion -------------------------------------------------- ---------------------------------------------------------------------------------------------------------->
 <div
   *ngIf="showDeleteConfirmation"
-  class="fixed flex items-center justify-center z-50"
+  class="fixed flex items-center inset-0 bg-black bg-opacity-30 justify-center z-50"
 >
   <div class="bg-white rounded-lg shadow-lg p-5">
     <h3 class="text-lg font-semibold">Confirm Deletion</h3>
@@ -1468,7 +1528,52 @@
     </div>
   </div>
 </div>
+
+@if (newPageModal) {
 <div
-  *ngIf="showDeleteConfirmation"
-  class="fixed inset-0 bg-black opacity-50 z-40"
-></div>
+  class="fixed inset-0 z-50 bg-black bg-opacity-30 flex justify-center items-center"
+>
+  <div class="flex flex-col bg-white rounded-lg shadow-xl shadow-black p-5">
+    <div class="inter-6 text-xl font-semibold mb-4">Create a New Page</div>
+    <form
+      [formGroup]="newPageForm"
+      (keydown.enter)="preventSubmit($event)"
+      class="w-full flex flex-col gap-4"
+    >
+      <div>
+        <label class="inter-4 text-base text-gray-700">Page Name</label>
+        <input
+          class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300 mt-1"
+          formControlName="pageName"
+        />
+        @if (pageName && pageName.invalid && pageName.touched) {
+        <p class="inter-4 text-red-500 ps-2">Page Name is required</p>
+        }
+      </div>
+      <div class="">
+        <label class="inter-4 text-base text-gray-700">Page Icon</label>
+        <input class="w-full mt-1" type="file" formControlName="pageIcon" />
+        @if (pageIcon && pageIcon.invalid && pageIcon.touched) {
+        <p class="inter-4 text-red-500 ps-2">Page Icon is required</p>
+        }
+      </div>
+      <div class="w-full h-[1px] bg-gray-200"></div>
+      <div class="flex justify-end gap-2">
+        <button
+          (click)="closeNewPageModal()"
+          class="px-4 py-[10px] inter-6 text-base font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
+        >
+          Cancel
+        </button>
+        <button
+          type="button"
+          (click)="onAddNewPage()"
+          class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
+        >
+          Create
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+}
